--- a/Server/Zip/Zip.vcxproj.filters
+++ b/Server/Zip/Zip.vcxproj.filters
@@ -1,75 +1,112 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{844ab390-b8be-4e00-ab82-c5c29a9a2234}</UniqueIdentifier>
-      <Extensions>cpp;c;cxx;rc;def;r;odl;idl;hpj;bat</Extensions>
+    <Filter Include="Generated Files">
+      <UniqueIdentifier>{71ED8ED8-ACB9-4CE9-BBE1-E00B30144E11}</UniqueIdentifier>
+      <Extensions>cpp;c;cxx;moc;h;def;odl;idl;res;</Extensions>
+    </Filter>
+    <Filter Include="Generated Files">
+      <UniqueIdentifier>{71ED8ED8-ACB9-4CE9-BBE1-E00B30144E11}</UniqueIdentifier>
+      <Extensions>cpp;c;cxx;moc;h;def;odl;idl;res;</Extensions>
     </Filter>
     <Filter Include="Header Files">
-      <UniqueIdentifier>{05c976f8-0530-4a9b-a3c8-adacdfd9e8dd}</UniqueIdentifier>
-      <Extensions>h;hpp;hxx;hm;inl</Extensions>
+      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
+      <Extensions>h;hpp;hxx;hm;inl;inc;xsd</Extensions>
+    </Filter>
+    <Filter Include="Header Files">
+      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
+      <Extensions>h;hpp;hxx;hm;inl;inc;xsd</Extensions>
+    </Filter>
+    <Filter Include="Source Files">
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <Extensions>cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    </Filter>
+    <Filter Include="Source Files">
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <Extensions>cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="AutoBuffer.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="BigFile.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="CentralDir.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="FileHeader.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="StdAfx.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ZipArchive.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ZipException.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ZipInternalInfo.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ZipStorage.cpp">
-      <Filter>Source Files</Filter>
+    <Filter Include="Source Files\sources" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="sources\AutoBuffer.cpp">
+      <Filter>Source Files\sources</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="Zip.htm" />
-    <CustomBuild Include="zlib.lib" />
-    <CustomBuild Include="Appnote.txt" />
-    <CustomBuild Include="Readme.txt" />
-    <CustomBuild Include="AutoBuffer.h">
+    <ClCompile Include="sources\BigFile.cpp">
+      <Filter>Source Files\sources</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="sources\CentralDir.cpp">
+      <Filter>Source Files\sources</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="sources\FileHeader.cpp">
+      <Filter>Source Files\sources</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="sources\ZipArchive.cpp">
+      <Filter>Source Files\sources</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="sources\ZipException.cpp">
+      <Filter>Source Files\sources</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="sources\ZipInternalInfo.cpp">
+      <Filter>Source Files\sources</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="sources\ZipStorage.cpp">
+      <Filter>Source Files\sources</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Header Files\include" />
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Header Files\sources" />
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="stdafx.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
-    <CustomBuild Include="BigFile.h">
-      <Filter>Header Files</Filter>
+    <CustomBuild Include="include\ZipArchive.h">
+      <Filter>Header Files\include</Filter>
     </CustomBuild>
-    <CustomBuild Include="CentralDir.h">
-      <Filter>Header Files</Filter>
+    <CustomBuild Include="include\ZipException.h">
+      <Filter>Header Files\include</Filter>
     </CustomBuild>
-    <CustomBuild Include="FileHeader.h">
-      <Filter>Header Files</Filter>
+    <CustomBuild Include="include\ZipInternalInfo.h">
+      <Filter>Header Files\include</Filter>
     </CustomBuild>
-    <CustomBuild Include="StdAfx.h">
-      <Filter>Header Files</Filter>
+    <CustomBuild Include="include\ZipStorage.h">
+      <Filter>Header Files\include</Filter>
     </CustomBuild>
-    <CustomBuild Include="ZipArchive.h">
-      <Filter>Header Files</Filter>
+    <CustomBuild Include="sources\AutoBuffer.h">
+      <Filter>Header Files\sources</Filter>
     </CustomBuild>
-    <CustomBuild Include="ZipException.h">
-      <Filter>Header Files</Filter>
+    <CustomBuild Include="sources\BigFile.h">
+      <Filter>Header Files\sources</Filter>
     </CustomBuild>
-    <CustomBuild Include="ZipInternalInfo.h">
-      <Filter>Header Files</Filter>
+    <CustomBuild Include="sources\CentralDir.h">
+      <Filter>Header Files\sources</Filter>
     </CustomBuild>
-    <CustomBuild Include="ZipStorage.h">
-      <Filter>Header Files</Filter>
+    <CustomBuild Include="sources\FileHeader.h">
+      <Filter>Header Files\sources</Filter>
     </CustomBuild>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="stdafx.h.cpp">
+      <Filter>Generated Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
